# NLP

./: .gitignore  README.md  pipeline.md  pyproject.toml  requirements.txt  result_analysis.md
configs/: benchmark.yaml  benchmark_gpu2_3_local.yaml
notebooks/: empirical_study.ipynb  empirical_study_executed.ipynb  improvement_study.ipynb  improvement_study_executed.ipynb
report/: build_zip.py  main.tex  report.md
results/: failure_cases_natural_questions_no_thinking.csv  failure_cases_natural_questions_thinking.csv  failure_cases_sciq_no_thinking.csv  failure_cases_sciq_thinking.csv  failure_cases_simpleqa_no_thinking.csv  failure_cases_simpleqa_thinking.csv  failure_cases_truthfulqa_no_thinking.csv  failure_cases_truthfulqa_thinking.csv  failure_summary.csv  helm_natural_questions_no_thinking_bge-base_similarity.csv  helm_natural_questions_no_thinking_e5-base_similarity.csv  helm_natural_questions_no_thinking_minilm_similarity.csv  helm_natural_questions_thinking_bge-base_similarity.csv  helm_natural_questions_thinking_e5-base_similarity.csv  helm_natural_questions_thinking_minilm_similarity.csv  helm_sciq_no_thinking_bge-base_similarity.csv  helm_sciq_no_thinking_e5-base_similarity.csv  helm_sciq_no_thinking_minilm_similarity.csv  helm_sciq_thinking_bge-base_similarity.csv  helm_sciq_thinking_e5-base_similarity.csv  helm_sciq_thinking_minilm_similarity.csv  helm_simpleqa_no_thinking_bge-base_similarity.csv  helm_simpleqa_no_thinking_e5-base_similarity.csv  helm_simpleqa_no_thinking_minilm_similarity.csv  helm_simpleqa_thinking_bge-base_similarity.csv  (+131 more)
(+217 files in other folders)
